tambah  src="assets/image/wall.png"

--- a/snake-game/index.html
+++ b/snake-game/index.html
@@ -12,11 +12,11 @@
         align-items: center;
       }
     </style>
+
+    <!-- Soal no 3: Tambahkan resource gambar untuk ditampilkan di canvas -->
     <img
       id="apple"
       style="display: none;"
-      width="100px"
-      height="100px"
       src="assets/image/apel.png"
       alt="Apple"
     />
@@ -26,10 +26,17 @@
       src="assets/image/ular.png"
       alt="Snake"
     />
+    <img
+      id="wall"
+      style="display: none;"
+      src="assets/image/wall.png"
+      alt="Wall"
+    />
+    <!-- Soal no 1: Ubah nilai width dan height menjadi 600 pada element canvas:  -->
     <canvas
       id="snakeBoard"
-      width="450"
-      height="450"
+      width="550"
+      height="550"
       style="background-color:  #07050c;"
     ></canvas>
     <div style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
