--- a/snake-game/index.html
+++ b/snake-game/index.html
@@ -39,7 +39,7 @@
       id="snakeBoard"
       width="550"
       height="550"
-      style="background-color:  #d7cfe9;"
+      style="background-color:  #000000;"
     ></canvas>
     <div style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
       <h2 id="level">Snake Game - Level 1</h3>
